# zapply

./: .gitignore  README.md  package.json  tsconfig.json  wrangler.jsonc
db/: schema.sql
public/: robots.txt  sitemap.xml
scraper/: Cargo.toml  index.ts
scraper/src/: config.rs  location.rs  main.rs  models.rs  parsers.rs  tag.rs
src/: client.ts  index.tsx  renderer.tsx  style.css  types.ts
src/routes/: api.tsx
