[package]
name = "zapply"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
ammonia = "4.0"
dotenvy = "0.15"
async-trait = "0.1"
indicatif = "0.17"
chrono = "0.4"
